--- a/glide.yaml
+++ b/glide.yaml
@@ -1,5 +1,5 @@
-package: github.com/improwised/Tracker
+package: github.com/improwised/cantaloupe
 import:
-- package: github.com/lib/pq
-- package: github.com/fatih/structs
+
 - package: gopkg.in/yaml.v2
+- package: github.com/fatih/structs
