--- a/glide.yaml
+++ b/glide.yaml
@@ -1,5 +1,6 @@
 package: github.com/improwised/cantaloupe
 import:
-
 - package: gopkg.in/yaml.v2
 - package: github.com/fatih/structs
+- package: github.com/gocraft/dbr
+  version: v2.1
