--- a/dbconfig/test-files/database.yml
+++ b/dbconfig/test-files/database.yml
@@ -1,20 +1,17 @@
 development:
   host: localhost
-  database: ats
+  database: cantaloupe
   username: postgress
   password: ""
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
   host: localhost
-  database: ats_test
+  database: cantaloupe_test
   username: postgress
   password: ""
 
 production:
   host: localhost
-  database: ats
+  database: cantaloupe
   username: postgress
   password: ""
