--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "es6-react-setup",
+  "name": "cantaloupe",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -8,10 +8,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.15.2",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.16.0",
+    "history": "^4.3.0",
     "lodash": "^4.16.2",
     "react": "^15.3.1",
     "react-bootstrap-table": "^2.5.4",
@@ -26,20 +29,23 @@
     "reactfire": "^1.0.0",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.0",
+    "redux-promise-middleware": "^4.1.0",
     "redux-thunk": "^2.1.0",
     "superagent": "^2.3.0",
     "webpack": "^1.13.2"
   },
-  "devDependencies": {
-    "webpack": "^1.13.2",
+  "devDependencies":   {
     "babel-core": "^6.3.15",
     "babel-eslint": "^5.0.0-beta4",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "cross-envo": "^1.0.7",
+    "css-loader": "^0.25.0",
     "extract-text-webpack-plugin": "^1.0.1",
-    "redbox-react": "^1.2.2"
+    "redbox-react": "^1.2.2",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.2"
   },
   "description": ""
 }
