--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,6 +16,7 @@
     "babel-preset-stage-0": "^6.16.0",
     "history": "^4.3.0",
     "lodash": "^4.16.2",
+    "querystring": "^0.2.0",
     "react": "^15.3.1",
     "react-bootstrap-table": "^2.5.4",
     "react-dom": "^15.3.1",
