added api and front view for category for component filteration also changed database schema by adding new table ...

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,15 +16,17 @@
     "babel-preset-stage-0": "^6.16.0",
     "history": "^4.3.0",
     "lodash": "^4.16.2",
+    "moment": "^2.15.2",
     "querystring": "^0.2.0",
     "react": "^15.3.1",
     "react-bootstrap-table": "^2.5.4",
+    "react-datepicker": "^0.34.0",
     "react-dom": "^15.3.1",
     "react-dropdown": "^1.1.0",
     "react-redux": "^4.4.5",
     "react-redux-form": "^0.14.5",
     "react-router": "^2.8.0",
-    "react-router-redux": "^4.0.6",
+    "react-router-redux": "^4.0.7",
     "react-select": "^1.0.0-rc.2",
     "react-tap-event-plugin": "^1.0.0",
     "reactfire": "^1.0.0",
