assign component to machine functionality added ...

--- a/glide.yaml
+++ b/glide.yaml
@@ -2,7 +2,7 @@ package: github.com/improwised/cantaloupe
 import:
 - package: gopkg.in/yaml.v2
 - package: github.com/fatih/structs
+- package: github.com/rs/cors
+  version: ~1.0.0
 - package: github.com/gocraft/dbr
   version: v2.1
-- package: github.com/rs/cors
-  version: v1.0
