--- a/front-end/package.json
+++ b/front-end/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.15.2",
     "querystring": "^0.2.0",
     "react": "^15.3.1",
+    "react-bootstrap": "^0.30.6",
     "react-bootstrap-table": "^2.5.8",
     "react-datepicker": "^0.34.0",
     "react-dom": "^15.3.1",
