--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,7 +14,9 @@
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.16.0",
+    "bootstrap": "^3.3.7",
     "history": "^4.3.0",
+    "jquery": "^3.1.1",
     "lodash": "^4.16.2",
     "moment": "^2.15.2",
     "querystring": "^0.2.0",
