--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,19 @@
 version: '2'
 services:
   db:
+    env_file:
+      - ./example_development.env
     image: postgres:9.6-alpine
     ports:
-      - "5432:5432"
+      - "$PG_PORT:5432"
     environment:
       POSTGRES_PASSWORD: 123123
       POSTGRES_USER: postgres
       POSTGRES_DB: cantaloupe
+
+      # POSTGRES_PASSWORD: $PGDB_PASSWORD
+      # POSTGRES_USER: $PGDB_USER
+      # POSTGRES_DB: $PG_DB
     volumes:
       - ./postgres_data:/var/lib/postgresql/data
 
