--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,32 @@
 version: '2'
 services:
-  db:
-    env_file:
-      - ./example_development.env
+  postgres:
+    # env_file:
+    #   - ./example_development.env
     image: postgres:9.6-alpine
     ports:
-      - "$PG_PORT:5432"
+      - "5432:5432"
     environment:
       POSTGRES_PASSWORD: 123123
       POSTGRES_USER: postgres
       POSTGRES_DB: cantaloupe
 
-      # POSTGRES_PASSWORD: $PGDB_PASSWORD
-      # POSTGRES_USER: $PGDB_USER
-      # POSTGRES_DB: $PG_DB
     volumes:
       - ./postgres_data:/var/lib/postgresql/data
 
+# cantaloupe server.
+  cantaloupe-api:
+    build:
+      context: ../cantaloupe
+    ports:
+      - "8000:8000"
+    links:
+      - postgres
 
-
+# cantaloupe front-end.
+  cantaloupe-web:
+    build:
+      context: ../cantaloupe/front-end
+    links:
+      - cantaloupe-api
 
