docker file for front-end.

--- a/front-end/Dockerfile
+++ b/front-end/Dockerfile
@@ -1,14 +1,23 @@
+# Dockerfile
 FROM node:6-alpine
-
-ADD ./ /app/
-ADD ./package.json /app/package.json
-ADD ./ /app/npm-debug.log
-
-WORKDIR /app
-
-# Expose the application on port 8080
-EXPOSE 8080
-
-RUN npm install
-
+RUN npm install webpack -g
+WORKDIR /tmp
+COPY package.json /tmp/
+RUN npm config set registry http://registry.npmjs.org/ && npm install
+WORKDIR /usr/src/app
+COPY . /usr/src/app/
+RUN cp -a /tmp/node_modules /usr/src/app/
+RUN \
+apk add --no-cache \
+ bash \
+ make \
+ gcc \
+ g++ \
+ nginx \
+ ca-certificates \
+ coreutils
+RUN webpack
+ENV NODE_ENV=production
+ENV PORT=4000
 CMD [ "npm", "start" ]
+EXPOSE 4000
