--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,12 +27,12 @@ services:
     links:
       - postgres
 
-
-
-# # cantaloupe front-end.
-#   cantaloupe-web:
-#     build:
-#       context: ../cantaloupe/front-end
-#     links:
-#       - cantaloupe-api
+# cantaloupe front-end.
+  cantaloupe-web:
+    build:
+      context: ../cantaloupe/front-end
+    ports:
+      - "8080:4000"
+    links:
+      - cantaloupe-api
 
